--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
     <div id="header_wrap" class="outer">
         <header class="inner">
           <!-- <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a> -->
-          <h1 id="project_title">Garrett Hagemann</h1>
+          <h1 id="project_title">{{site.title | default: site.github.repository_name}}</h1>
           <!-- <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2> -->
 
           {% if site.show_downloads %}
@@ -26,6 +26,13 @@
             </section>
           {% endif %}
         </header>
+    </div>
+
+    <!-- SIDEBAR -->
+    <div class="sidenav"
+      <a href="#">About</a>
+      <a href="#">Research</a>
+      <a href="#">CV</a>
     </div>
 
     <!-- MAIN CONTENT -->
