--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
     </div>
 
     <!-- SIDEBAR -->
-    <div class="sidenav"
+    <div class="sidenav">
       <a href="#">About</a>
       <a href="#">Research</a>
       <a href="#">CV</a>
