--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,10 +29,12 @@
     </div>
 
     <!-- SIDEBAR -->
-    <div class="sidenav">
-      <a href="#">About</a>
-      <a href="#">Research</a>
-      <a href="#">CV</a>
+    <div class="nav">
+      <ul>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Research</a></li>
+        <li><a href="#">CV</a></li>
+      </ul>
     </div>
 
     <!-- MAIN CONTENT -->
