Updated Research Page
Added research page. Need to add files

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,6 +3,10 @@
 
 @import "{{ site.theme }}";
 
+.nav{
+  align: center
+}
+
 .nav ul {
   list-style-type: none;
   margin: 0;
@@ -16,6 +20,7 @@
 
 .nav li a {
   display: block;
+  color: white
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
