--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,8 +31,8 @@
     <!-- SIDEBAR -->
     <div class="nav">
       <ul>
-        <li><a href="index.md">About</a></li>
-        <li><a href="research.md">Research</a></li>
+        <li><a href="./index.md">About</a></li>
+        <li><a href="./research.md">Research</a></li>
         <li><a href="#">CV</a></li>
       </ul>
     </div>
