--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,8 +32,8 @@
     <div class="nav">
       <ul>
         <li><a href="./index.md">About</a></li>
-        <li><a href="./research.md">Research2</a></li>
-        <li><a href="#">CV</a></li>
+        <li><a href="./research.md">Research</a></li>
+        <li><a href="/pdf/Hagemann CV.pdf">CV</a></li>
       </ul>
     </div>
 
