--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,9 +31,9 @@
     <!-- SIDEBAR -->
     <div class="nav">
       <ul>
-        <li><a href="./index.md">About</a></li>
-        <li><a href="./research.md">Research</a></li>
-        <li><a href="/pdf/Hagemann CV.pdf">CV</a></li>
+        <li><a href="./index.html">About</a></li>
+        <li><a href="./research.html">Research</a></li>
+        <li><a href="/pdfs/Hagemann_CV.pdf">CV</a></li>
       </ul>
     </div>
 
