Adjusting spacing in img_tab

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -38,7 +38,7 @@ table.img_tab {
 }
 
 table.img_tab td {
-  padding: 0 ;
-  border: 5px;
+  padding: 0 0 0 15px;
+  border: 0;
   border-style: hidden;
 }
